# Billiards-Shot-Clock

./: .coverage  .gitignore  .pre-commit-config.yaml  I2C_LCD_driver.py  IMPLEMENTATION_PLAN.md  Project Bugs.md  README.md  README.txt  gpt_interrupt_1.py  interrupt_test.py  main.py  main_gpt_docstrings.py  new_interrupt_test.py  old_main.py  oled_demo.py  pyproject.toml  rpi_irq.py  shot_clock_test.py  understanding_interrupts.py
.github/workflows/: ci.yml
lib/: Pico_OLED_242.py  audio.py  button_interrupt.py  button_logic.py  button_menu.py  button_setup.py  display.py  game_rules.py  hardware_config.py  models.py  rules.json  shot_clock_hw.py  shot_clock_models.py  ui.py  ui_components.py  ui_gameplay.py  ui_screens.py
tests/: test_apa_9ball_rack.py  test_apa_flow.py  test_apa_rules.py  test_display.py  test_hardware.py  test_interrupts.py  test_logic.py  test_main.py  test_models.py  test_phase_1.py  test_phase_2.py  test_phase_3.py  test_phase_4.py  test_rules.py  test_scenarios.py  test_shootout_logic.py  test_timeouts_mode_menu.py  test_ui.py  test_ultimate_pool_transitions.py  test_wnt_update.py
